--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h3 id="class">this is a simple card using the css box model</h3>
+    <h3 class="class1">this is a simple card using the css box model</h3>
 </body>
 </html>
