--- a/index.html
+++ b/index.html
@@ -3,10 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>css box</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
+    <title>colors</title>
 </head>
 <body>
-    <h3 class="class1">this is a simple card using the css box model</h3>
+ <div class="container">
+ <div class="item item1">item1</div>
+  <div class="item item2">item2</div>
+  <div class="item item3">item3</div>
+  <div class="item item4">item4</div>
+  <div class="item item5">item5</div>
+   <div class="item item6">item6</div>
+ 
+ </div>
+
+ </div>
+ <div class="interview">
+  <div class="education">
+
+  </div>
+
+ </div>
 </body>
 </html>
+    
